--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioCreateUpdate.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioCreateUpdate.razor
@@ -22,6 +22,11 @@
             <InputText id="email" @bind-Value="QuestionarioModel.Email" class="form-control"></InputText>
             <ValidationMessage For="@(()=>QuestionarioModel.Email)"></ValidationMessage>
         </div>
+        <div class="form-group">
+            <label form="email">Corpo</label>
+            <InputTextArea id="email" @bind-Value="QuestionarioModel.Corpo" class="form-control"></InputTextArea>
+            <ValidationMessage For="@(()=>QuestionarioModel.Email)"></ValidationMessage>
+        </div>
         <button type="submit" class="btn btn-primary m-md-1">Save</button>
         <button class="btn btn-primary m-md-1" @onclick="CancelQuestionario">Cancel</button>
     </EditForm>
