--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioTable.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioTable.razor
@@ -25,7 +25,7 @@ else
                         <td>@q.Name</td>
                         <td>@q.Description</td>
                         <td>
-                            <button class="btn btn-primary" @onclick="()=>DetailsQuestionario(q)">Details</button>
+                            <button class="btn btn-primary" @onclick="()=>DetailsQuestionario(q)">Responder</button>
                             <button class="btn btn-primary" @onclick="()=>EditQuestionario(q)">Edit</button>
                             <button class="btn btn-primary" @onclick="()=>DeleteQuestionario(q)">Delete</button>
                         </td>
