--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioTable.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioTable.razor
@@ -11,9 +11,7 @@ else
         <table class="table">
             <thead>
                 <tr>
-                    <th>Id</th>
                     <th>Name</th>
-                    <th>Description</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -21,13 +19,16 @@ else
                 @foreach (var q in qList)
                 {
                     <tr>
-                        <td>@q.Id</td>
                         <td>@q.Name</td>
-                        <td>@q.Description</td>
                         <td>
-                            <button class="btn btn-primary" @onclick="()=>DetailsQuestionario(q)">Responder</button>
-                            <button class="btn btn-primary" @onclick="()=>EditQuestionario(q)">Edit</button>
-                            <button class="btn btn-primary" @onclick="()=>DeleteQuestionario(q)">Delete</button>
+                            <button class="btn btn-primary" @onclick="()=>DetailsQuestionario(q)"><i class="bi bi-question-circle-fill"></i></button>
+                            <button class="btn btn-primary" @onclick="()=>EditQuestionario(q)"><i class="bi bi-pencil-square"></i></button>
+                            <button class="btn btn-danger" @onclick="()=>DeleteQuestionario(q)" >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+                                    <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+                                </svg>
+                            </button>
                         </td>
                     </tr>
                 }
@@ -36,7 +37,7 @@ else
     }
 }
 
-
+@* <i class="bi bi-trash"></i> *@
 
 
 @code {
