--- a/SabeNaoSabe.WASM/Pages/Index.razor
+++ b/SabeNaoSabe.WASM/Pages/Index.razor
@@ -7,5 +7,7 @@
 
 
 @code {
-    private readonly string _baseUrl = "http://localhost:5052";
+    private readonly string _baseUrlaux = "http://localhost:5052";
+
+    private readonly string _baseUrl = "https://sabenaosabewebapi20240708194323.azurewebsites.net";
 }
