--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioComponent.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioComponent.razor
@@ -152,7 +152,10 @@
 
         strTitle = "Responder";
 
-        imageSource = "https://localhost:7256/api/Questionario/GetUploadedFile?name=";
+        // imageSource = "https://localhost:7256/api/Questionario/GetUploadedFile?name=";
+        imageSource = "http://localhost:5052/api/Questionario/GetUploadedFile?name=";
+
+  
 
         showAddButton = false;
         showQuestionarioTable = false;
