--- a/SabeNaoSabe.RazorClassLibrary/Component/AddButton.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/AddButton.razor
@@ -1,9 +1,15 @@
-﻿@if (Visible)
-{
-    <div>
-        <button class="btn btn-primary" @onclick="CreateUpdateQuestionario">Add</button>
-    </div>
-}
+﻿<div class="container">
+    @if (Visible)
+    {
+        <br />
+        <div>
+            <button class="btn btn-primary" @onclick="CreateUpdateQuestionario">Add</button>
+        </div>
+        <br />
+    }
+</div>
+
+
 
 
 @code {
