--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioDetails.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioDetails.razor
@@ -3,61 +3,72 @@
 
 @if (Visible)
 {
-    <div>
-        <label><b>Name:</b> @QuestionarioModel.Name</label>
-    </div>
-    <div>
-        <label><b>Description:</b> @QuestionarioModel.Description</label>
-    </div>
-    <p>
-       <img src="@(imageSource+"image0.jpg")" weight="150" height="100" />
-    </p>
-    <EditForm Model="corpoList" OnSubmit="RespostaQuestionario"> 
-        @foreach (var corpo in corpoList)
-        {
-            <br /><br />
-            <p>
-                <img src="@(imageSource+$"image{@corpo.Id}.png")" weight="150" height="100" />
-            </p>
-            <label><b>Pergunta @corpo.Id:</b>@corpo.Pergunta</label>
-            <br />
-            @if (corpo.Tipo == 1)
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <label><b>Name:</b> @QuestionarioModel.Name</label>
+                <div class="row">
+                    <div class="col-8 bg-light p-2">
+                        <label><b>Description:</b> @QuestionarioModel.Description</label>
+                    </div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+            <div class="col-4">
+                <p>
+                    <img src="@(imageSource+"image0.jpg")" class="rounded-circle img-fluid" weight="200" height="100" />
+                    @*<img src="images/image0.jpg" weight="200" height="100" /> *@
+                </p>
+            </div>
+        </div>
+        <EditForm Model="corpoList" OnSubmit="RespostaQuestionario">
+            @foreach (var corpo in corpoList)
             {
-                // opcao radio, não funcionou o inputradiogroup, apelei.
-                @foreach(var opcao in corpo.Opcoes)
+                <p>
+                    @*<img src="images/image@(corpo.Id).png" weight="200" height="100" />*@
+                    <img src="@(imageSource+$"image{@corpo.Id}.png")" class="rounded img-fluid" weight="200" height="100" />
+                </p>
+                <label><b>Pergunta @corpo.Id: </b>@corpo.Pergunta</label>
+                <br />
+                @if (corpo.Tipo == 1)
                 {
-                    <input type="radio" Value="@opcao.Checked" name="@corpo.Id.ToString()" id="@opcao.Id" @onchange="@(()=>corpo.Resposta=opcao.Id)"/>
-                    <label for="@opcao.Id">@opcao.Descricao</label>
-                    <br />
+                    // opcao radio, não funcionou o inputradiogroup, apelei.
+                    @foreach (var opcao in corpo.Opcoes)
+                    {
+                        <input type="radio" Value="@opcao.Checked" name="@corpo.Id.ToString()" id="@opcao.Id" @onchange="@(()=>corpo.Resposta=opcao.Id)" />
+                        <label for="@opcao.Id">@opcao.Descricao</label>
+                        <br />
+                    }
+                    @if (exp)
+                    {
+                        <br />
+                        <p><b>Resultado:</b> @corpo.Resultado</p>
+                        <p><b>Explicação:</b> @corpo.Explicacao</p>
+                    }
                 }
-                @if (exp)
+                else
                 {
-                    <br />
-                    <p><b>Resultado:</b> @corpo.Resultado</p>
-                    <p><b>Explicação:</b> @corpo.Explicacao</p>
+                        // ocpcao checkbox
+                    @foreach (var opcao in corpo.Opcoes)
+                    {
+                        <InputCheckbox id="opcaoCheck" @bind-Value="opcao.Checked" class="form-control-input" />
+                        <span style="padding-left: 5px">@opcao.Descricao</span>
+                        <br />
+                    }
+                    @if (exp)
+                    {
+                        <br />
+                        <p><b>Resultado:</b> @corpo.Resultado</p>
+                        <p><b>Explicação:</b> @corpo.Explicacao</p>
+                    }
                 }
+                <br /><br />
             }
-            else
-            {
-                // ocpcao checkbox
-                @foreach (var opcao in corpo.Opcoes)
-                {
-                    <InputCheckbox id="opcaoCheck" @bind-Value="opcao.Checked" class="form-control-input" />
-                    <span style="padding-left: 5px">@opcao.Descricao</span>
-                    <br />
-                }
-                @if (exp)
-                {
-                    <br />
-                    <p><b>Resultado:</b> @corpo.Resultado</p>
-                    <p><b>Explicação:</b> @corpo.Explicacao</p>
-                }
-            }
-        }
-        <button type="submit" class="btn btn-primary m-md-1">Corrige</button>
-        <button class="btn btn-primary m-md-1" @onclick="CancelQuestionario">Cancel</button>
-        <button class="btn btn-primary m-md-1" @onclick="BackQuestionario">Back</button>
-    </EditForm>
+            <button type="submit" class="btn btn-primary m-md-1">Corrige</button>
+            <button class="btn btn-primary m-md-1" @onclick="CancelQuestionario">Cancel</button>
+            <button class="btn btn-primary m-md-1" @onclick="BackQuestionario">Back</button>
+        </EditForm>
+    </div>
 }
 @code {
     [Parameter]
@@ -78,7 +89,6 @@
     public string? imageSource { get; set; }
 
     public bool exp = false;
-
 
     private async Task RespostaQuestionario()
     {
